--- a/_config.yml
+++ b/_config.yml
@@ -18,26 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Landing Page
+email: anamariav.tamayo@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-# baseurl: "" # the subpath of your site, e.g. /blog
-# url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  This is my landing page where I...
+baseurl: ""      # place folder name if the site is served in a subfolder
+url: https://anamariatamayo.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+domain: anamariatamayo.github.io      # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+
+#twitter_username: jekyllrb
+#github_username:  jekyll
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
-
-
-domain: anamariatamayo.github.io      # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://anamariatamayo.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /      # place folder name if the site is served in a subfolder
 
 # Exclude from processing.
 # The following items will not be processed, by default.
